<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcf2e8"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:background="#FFE0B2"
                android:contentDescription="@string/todo"
                android:src="@android:drawable/ic_menu_send"
                android:tint="#452C15"
                tools:ignore="PrivateResource"
                tools:src="@android:drawable/ic_menu_send" />

            <TextView
                style="@style/Widget.AppCompat.TextView.SpinnerItem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFE0B2"
                android:gravity="center_horizontal"
                android:text="@string/order"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#452C15"
                android:textSize="30sp"
                app:fontFamily="@font/nixie_one" />
        </LinearLayout>


        <ImageView
            android:layout_width="435dp"
            android:layout_height="273dp"
            android:background="#fcf2e8"
            android:contentDescription="@string/todo"
            android:src="@drawable/imagee" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:gravity="center"
            android:text="@string/coffee_is_always_good_idea"
            android:textColor="#050505"
            android:textColorHighlight="#000000"
            android:textColorHint="#000000"
            android:textColorLink="#0E0E0E"
            app:fontFamily="@font/nixie_one" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fcf2e8">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:background="#fcf2e8"
            android:orientation="horizontal">

            <TextView
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:paddingStart="24dp"
                android:paddingLeft="24dp"
                android:paddingTop="8dp"
                android:text="@string/quantity"
                android:textColor="#0E0404"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/button_plus"
                style="@android:style/Widget.Material.Light.Button"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:background="#FFE0B2"
                android:gravity="center"
                android:onClick="increment"
                android:text="@string/plus"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="16sp"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/_0"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button_minus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="#FFE0B2"
                android:onClick="decrement"
                android:text="@string/minus"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="16sp" />

        </LinearLayout>


        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_caramel" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fcf2e8"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="24dp"
                android:paddingLeft="24dp"
                android:text="@string/order_summary"
                android:textColor="#0E0101"
                app:fontFamily="@font/nixie_one"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/price_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/price_0"
                android:textColor="#000000"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/button"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#FFE0B2"
                android:onClick="submitOrder"
                android:text="@string/order" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>